fix resources css overlap

--- a/assets/css/sawhold.css
+++ b/assets/css/sawhold.css
@@ -75,7 +75,7 @@
         background-size: cover;
     }
 
-    #resources {
+    #resourcesPage {
         background-image: url(../img/womanLaptop.jpg);
         height: cover;
         -webkit-background-size: cover;
